--- a/maven-hybrid-framework/pom.xml
+++ b/maven-hybrid-framework/pom.xml
@@ -28,6 +28,9 @@
         <faker.version>1.0.1</faker.version>
         <log4j.version>1.2.16</log4j.version>
         <reportng.version>1.1.4</reportng.version>
+        
+        <!-- Default value -->
+        <environment>dev</environment>
     </properties>
     
     <!-- Quản lí thư viện -->
@@ -161,25 +164,91 @@
             </plugin>
 
             <!-- Run test -->
-            <plugin>
+            <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <!-- Run TestNG xml file -->
                     <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/runNopCommerceUser.xml</suiteXmlFile>
+                        <suiteXmlFile>environmentRunner/${environment}.xml</suiteXmlFile>
                     </suiteXmlFiles>
-
-                    <!-- Argument -->
+                    
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
                 </configuration>
-
-
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
+    
+    <profiles>
+	    <profile>
+	        <id>DEV</id>
+	        <build>
+	        	<plugins>
+		        	<plugin>
+		        		 <groupId>org.apache.maven.plugins</groupId>
+		                 <artifactId>maven-surefire-plugin</artifactId>
+		                 <version>2.22.2</version>
+		        		 <configuration>
+		                    <suiteXmlFiles>
+		                         <suiteXmlFile>environmentRunner/dev.xml</suiteXmlFile>
+		                    </suiteXmlFiles>
+	
+		                    <!-- Argument -->
+		                    <argLine>
+		                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+		                    </argLine>
+		                </configuration>
+		        	</plugin>	
+	        	</plugins>
+	        </build>
+	    </profile>
+	    <profile>
+	        <id>STAGING</id>
+	        <build>
+	        	<plugins>
+		        	<plugin>
+		        		 <groupId>org.apache.maven.plugins</groupId>
+		                 <artifactId>maven-surefire-plugin</artifactId>
+		                 <version>2.22.2</version>
+		        		 <configuration>
+		                    <suiteXmlFiles>
+		                         <suiteXmlFile>environmentRunner/staging.xml</suiteXmlFile>
+		                    </suiteXmlFiles>
+		                    
+		                    <!-- Argument -->
+		                    <argLine>
+		                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+		                    </argLine>
+		                </configuration>
+		        	</plugin>	
+	        	</plugins>
+	        </build>
+	    </profile>
+	    <profile>
+	        <id>TESTING</id>
+	        <build>
+	        	<plugins>
+		        	<plugin>
+		        		 <groupId>org.apache.maven.plugins</groupId>
+		                 <artifactId>maven-surefire-plugin</artifactId>
+		                 <version>2.22.2</version>
+		        		 <configuration>
+		                    <suiteXmlFiles>
+		                         <suiteXmlFile>environmentRunner/testing.xml</suiteXmlFile>
+		                    </suiteXmlFiles>
+		                    
+		                    <!-- Argument -->
+		                    <argLine>
+		                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+		                    </argLine>
+		                </configuration>
+		        	</plugin>	
+	        	</plugins>
+	        </build>
+	    </profile>
+    </profiles>
+    
   
 </project>
